[package]
name = "top-blake2"
version = "0.10.5" # Also update html_root_url in lib.rs when bumping this
description = "BLAKE2 hash functions"
authors = ["telosprotocol"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
documentation = "https://docs.rs/blake2"
repository = "https://github.com/LonDong-TopNetwork/top-blake2"
keywords = ["blake2"]
categories = ["cryptography", "no-std"]

[dependencies]
digest = { version = "0.10.3", features = ["mac"] }

[dev-dependencies]
digest = { version = "0.10.3", features = ["dev"] }
hex-literal = "0.2.2"

[features]
default = ["std"]
std = ["digest/std"]
reset = [] # Enable reset functionality
simd = []
simd_opt = ["simd"]
simd_asm = ["simd_opt"]
